# trading-bot

./: .dockerignore  DEPLOYMENT.md  docker-compose.yml
bot/: .env.example  .gitignore  Dockerfile  api.py  config.py  database.py  executor.py  logger.py  mt5_connector.py  pyproject.toml  requirements.txt  strategy.py  trading_bot.db  trading_bot.py
dashboard/: README.md  package-lock.json
dashboard/src/app/: page.tsx
dashboard/src/app/documentation/: page.tsx
dashboard/src/app/documentation/api/: page.tsx
dashboard/src/app/documentation/config/: page.tsx
dashboard/src/app/documentation/database/: page.tsx
dashboard/src/app/documentation/deployment/: page.tsx
dashboard/src/app/documentation/executor/: page.tsx
dashboard/src/app/documentation/logger/: page.tsx
dashboard/src/app/documentation/mt5-connector/: page.tsx
dashboard/src/app/documentation/overview/: page.tsx
dashboard/src/app/documentation/strategy/: page.tsx
dashboard/src/app/documentation/trading-bot/: page.tsx
dashboard/src/app/documentation/troubleshooting/: page.tsx
dashboard/src/app/mobile-guide/: page.tsx
dashboard/src/components/: code-block.tsx  dashboard.tsx  documentation-layout.tsx
dashboard/src/components/sections/: logs-section.tsx  signals-section.tsx  status-section.tsx  trades-section.tsx
dashboard/src/hooks/: use-api-connection.ts
